Support creating races. Improved test coverage.
