# backend/app/models/lane.rb
@@ -1,4 +1,5 @@
 class Lane < ApplicationRecord
   belongs_to :race
-  has_one :competitor
+  belongs_to :competitor, optional: true
+  accepts_nested_attributes_for :competitor, allow_destroy: true
 end
