# backend/openapi/v1/openapi.json
@@ -52,15 +52,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  }
-                },
-                "required": [
-                  "name"
-                ]
+                "$ref": "#/components/schemas/RaceInput"
               }
             }
           }
@@ -118,13 +110,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  }
-                },
-                "required": []
+                "$ref": "#/components/schemas/RaceInput"
               }
             }
           }
@@ -167,6 +153,14 @@
           "name": {
             "type": "string"
           },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          },
           "lanes": {
             "type": "array",
             "items": {
@@ -176,7 +170,10 @@
         },
         "required": [
           "id",
-          "name"
+          "name",
+          "lanes",
+          "created_at",
+          "updated_at"
         ]
       },
       "Lane": {
@@ -185,11 +182,26 @@
           "id": {
             "type": "integer"
           },
+          "race_id": {
+            "type": "integer"
+          },
+          "competitor_id": {
+            "type": "integer",
+            "nullable": true
+          },
           "name": {
             "type": "string"
           },
           "sort": {
             "type": "integer"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
           },
           "competitor": {
             "$ref": "#/components/schemas/Competitor",
@@ -199,7 +211,9 @@
         "required": [
           "id",
           "name",
-          "sort"
+          "sort",
+          "created_at",
+          "updated_at"
         ]
       },
       "Competitor": {
@@ -211,15 +225,115 @@
           "name": {
             "type": "string"
           },
-          "position": {
-            "type": "integer",
-            "nullable": true
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
           }
         },
         "required": [
           "id",
-          "name"
+          "name",
+          "created_at",
+          "updated_at"
         ]
+      },
+      "RaceInput": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "lanes": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/LaneInput"
+            }
+          }
+        },
+        "required": [
+          "name",
+          "lanes"
+        ],
+        "example": {
+          "race": {
+            "name": "Test Race 123",
+            "lanes": [
+              {
+                "name": "A",
+                "competitor": {
+                  "name": "Bill"
+                }
+              },
+              {
+                "name": "B",
+                "competitor": {
+                  "name": "Ted"
+                }
+              },
+              {
+                "name": "C",
+                "competitor": {
+                  "name": "Joanna"
+                }
+              },
+              {
+                "name": "D",
+                "competitor": {
+                  "name": "Elizabeth"
+                }
+              },
+              {
+                "name": "E",
+                "competitor": {
+                  "name": "Rufus"
+                }
+              }
+            ]
+          }
+        }
+      },
+      "LaneInput": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "competitor": {
+            "$ref": "#/components/schemas/CompetitorInput",
+            "nullable": true
+          }
+        },
+        "required": [
+          "name"
+        ],
+        "example": {
+          "lane": {
+            "name": "A",
+            "competitor": {
+              "name": "Bill"
+            }
+          }
+        }
+      },
+      "CompetitorInput": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "name"
+        ],
+        "example": {
+          "competitor": {
+            "name": "Bill"
+          }
+        }
       }
     }
   }
